--- a/css/my_styles.css
+++ b/css/my_styles.css
@@ -108,6 +108,11 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   font-weight: 700;
   line-height: 1.2;
   color: #343a40;
+  text-transform: none;
+}
+.subheading{
+    font-family: "Noto Sans TC",sans-serif;
+    text-transform: none;
 }
 
 h1, .h1 {
