--- a/css/my_styles.css
+++ b/css/my_styles.css
@@ -13,10 +13,10 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
 }
 
 .expedu_icon{
-    color:#495057
-    text-decoration: none;
+    color:#495057;
 }
 
 .expedu_icon:hover{
-    color:var(--bs-primary);
+    background-color:#495057;
+    color:#fff;
 }
