更改背景顏色(2)

--- a/css/my_styles.css
+++ b/css/my_styles.css
@@ -22,14 +22,14 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
 }
 
 :root{
-    --bs-primary:#7d78c3;
-    --bs-primary-rgb:125,120,195;
-    --bs-secondary:#91754b;
-    --bs-secondary-rgb:145,117,75;
+    --bs-primary:#4a6c95;
+    --bs-primary-rgb:74,108,149;
+    --bs-secondary:#9be4f7;
+    --bs-secondary-rgb:155,228,247;
 }
 
 a{
-    color:var(--bs-primary);
+    color:var(--bs-secondary);
 }
 
 .social-icons .social-icon:hover{
