--- a/css/my_styles.css
+++ b/css/my_styles.css
@@ -28,7 +28,7 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
     --bs-secondary-rgb:95,164,181;
 }
 
-a{
+a:hover{
     color:var(--bs-primary);
 }
 
