--- a/css/my_styles.css
+++ b/css/my_styles.css
@@ -40,6 +40,6 @@ a:hover{
 .social-icons .social-icon:hover{
     background-color:var(--bs-secondary);
 }
-.fa-li{
+.fa-ul{
     font-size: 1.5rem;
 }
