--- a/css/my_styles.css
+++ b/css/my_styles.css
@@ -29,7 +29,7 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
 }
 
 a{
-    color:var(--bs-primary);
+    color:#1d9bd5;
     text-decoration:none;
 }
 a:hover{
